# data-school-Autumn23

./: .gitignore  README.md  requirements.txt
Code/Lab 3/: 3_Exploration.ipynb  memristive_networks.py
Labs/: lecture_examples.ipynb
Labs/Lab 1/: 1_Reproducibility.ipynb
Labs/Lab 2/: 2_Transformations.ipynb  2a_Transformations_sklearn.ipynb  2b_Transformations_torch.ipynb
Labs/Lab 3/: profiling.ipynb  requirements.txt
Labs/Lab 3/data/: B_mat.npy  C_mat.npy
Labs/Lab 3/small_world_propensity/: __init__.py  small_world_propensity.py
Labs/Lab 3/tests/: test_small_world.py
Labs/Lab 4/: 3_Exploration.ipynb
Lecture notes/: 1.pptx  1_Introduction.pptx  2_Reproducibility.pptx  3_Transformations.pptx  4_Testing.pptx  5_Publishing.pptx
Notebooks/: Lab1.ipynb  Lab1b.ipynb  Lab2.ipynb  lab2b.ipynb  memristive_networks.py  reservoir.py  seeds.py
audio-classifier/: README.md  audio_classification.ipynb  best_model.joblib  pyproject.toml  requirements.txt
audio-classifier/audio_classifier/: __init__.py  audio_classification.ipynb  seeds.py  summary_stats.py  tune.py  utils.py
audio-classifier/searches/: grid_search.joblib  grid_search_2.joblib  grid_search_3.joblib
audio-classifier/tests/: test_SummaryStats.py  test_audio_functions.py  test_hyper_tuning.py
publishing/LinearRegressor/: README.md
