[tool.poetry]
name = "audio-classifier"
version = "0.1.0"
description = ""
authors = ["accelerate science"]
readme = "README.md"
packages = [{include = "audio_classifier"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
torch = "^2.0.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.0"
typer-cli = "^0.0.13"
torchaudio = "^2.0.2"
pandas = "^2.1.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audio-classifier = "audio_classifier.cli:app"